# rust-experiments

./: .gitignore  Cargo.toml  README.md
basics/: Cargo.toml
basics/src/: lib.rs  main.rs
basics/src/basics/: enums.rs  operations.rs  tuples.rs
basics/src/cli/: commands.rs  mod.rs  ncurses_basics.rs
basics/src/fundamentals/: annotations.rs  box_deref_drop.rs  closures.rs  collections.rs  conditions.rs  enums.rs  error_handling.rs  functions.rs  genericity.rs  iter.rs  iterators.rs  lifetime.rs  lists.rs  loops.rs  mod.rs  module_system.rs  operations.rs  ownership.rs  ref_cell.rs  reference_counters.rs  structs.rs  threads.rs  traits.rs  tuples.rs  variables.rs
basics/src/git/: git_experiments.rs  mod.rs
basics/src/std_samples/: args.rs  files.rs  mod.rs  process.rs
basics/src/testing/: calculator.rs  calculator_test.rs  mod.rs  private_method_test.rs
basics/src/tests/: calculator.rs  calculator_test.rs  mod.rs
basics/src/tokio_samples/: client.rs
basics/tests/: integration_test.rs
cli/: Cargo.toml
cli/src/: main.rs
httpserver/: Cargo.toml
httpserver/src/: lib.rs  main.rs  thread_pool.rs
memo/: Cargo.toml
memo/src/: argument_parser.rs  lib.rs  main.rs
minigrep/: Cargo.toml
minigrep/src/: config.rs  file_reader.rs  lib.rs  main.rs  search.rs
proxy/: .rustfmt.toml  Cargo.toml  README.md  config.yml  docker-compose.yml  proxy-config.yml
proxy/src/: authentication.rs  authentication_filter.rs  lib.rs  (+5 more)
src/: compound_types.rs  conditions.rs  functions.rs  loops.rs  main.rs  module_system.rs  ownership.rs  structs.rs  variables.rs
(+5 files in other folders)
