
[package]
name = "basics"
version = "0.1.0"
authors = ["Rémi Passmoilesel <r.passmoilesel@protonmail.com>"]
edition = "2018"
default-run = "basics"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.1"
clap = "2.33.0"
git2 = "0.10.1"
ncurses = "5.99.0"
regex = "1.3.1"
time = "0.1.25"
url = "2.1.0"
